Now back to normal fixes

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -132,8 +132,8 @@ FNG_The_Taonan-Suolun_Line_desc:0 "Like other recent constructions, the Taonan-S
 #Resume the Wang Yongjiang Reforms Section#
 FNG_Resume_the_Wang_Yongjiang_Reforms:0 "Resume the Wang Yongjiang Reforms"
 FNG_Resume_the_Wang_Yongjiang_Reforms_desc:0 "Zhang Zuolin's financial minister for many years, Wang Yongjiang, was almost singlehandedly responsible for the development of Manchuria from a weak borderland into one of China's most prosperous regions. Unfortunately he was taken from us some years ago, but his work and vision live on."
-FNG_Centralize_the_Banks:0 "Centralize the Banks"
-FNG_Centralize_the_Banks_desc:0 "Fengtian currently features four note-issuing banks, namely the Bank of the Three Eastern Provinces, the Bank of Kirin, the Bank of Heilungkiang and the Frontier Bank, each of which are products of earlier centralization efforts. Now it seems pertinent to complete this process and unify the banks under a single Central Bank."
+FNG_Centralize_the_Banks:0 "Centralise the Banks"
+FNG_Centralize_the_Banks_desc:0 "Fengtian currently features four note-issuing banks, namely the Bank of the Three Eastern Provinces, the Bank of Kirin, the Bank of Heilungkiang and the Frontier Bank, each of which are products of earlier centralisation efforts. Now it seems pertinent to complete this process and unify the banks under a single Central Bank."
 FNG_Re-Introduce_the_Fengtian_Dollar:0 "Re-introduce the Fengtian Dollar"
 FNG_Re-Introduce_the_Fengtian_Dollar_desc:0 "The Fengtian Dollar was one of Wang Yongjiang's later experiments, and served as a currency un-backed by silver but still payable in tax, demonstrating the government's faith in its value but requiring no extra silver to print. Following enormous government expenditures during the Civil Wars and subsequent inflation, the currency was discontinued, but its flexibility could be useful today."
 FNG_Support_Sino-Japanese_Joint_Companies:0 "Support Sino-Japanese Joint Companies"
@@ -150,7 +150,7 @@ FNG_Reform_the_Civil_Service_Examination_desc:0 "In use for well over 2,000 year
 FNG_The_Fate_of_Mantetsu_Schooling:0 "The Fate of Mantetsu Schooling"
 FNG_The_Fate_of_Mantetsu_Schooling_desc:0 "Mantetsu has long maintained a series of privately run schools originally intended for the sons and daughters of employees and other Japanese immigrants. At the Japanese government's behest, these schools were opened to the paying public, and while they educate our children they also spread Japanese culture and norms. We have a choice to make."
 FNG_Rural_Reconstruction:0 "Rural Reconstruction"
-FNG_Rural_Reconstruction_desc:0 "Disturbed by China's decades of national humiliation, but not moved to the extreme conservatism of the Qing Dynasty or the radicalism of the Kuomintang, the Rural Reconstruction Movement seeks to revive the Chinese village through education, medical aid, and political organization."
+FNG_Rural_Reconstruction_desc:0 "Disturbed by China's decades of national humiliation, but not moved to the extreme conservatism of the Qing Dynasty or the radicalism of the Kuomintang, the Rural Reconstruction Movement seeks to revive the Chinese village through education, medical aid, and political organisation."
 FNG_Collaborate_with_the_Xiangshen:0 "Collaborate with the Xiangshen"
 FNG_Collaborate_with_the_Xiangshen_desc:0 "Xiangshen are landlords, retired officials, clan elders, and scholars who 'represent' peasants in meetings with county officials. Their power is so significant that for all of Chinese history the Central Government has never truly been able to exert influence below the county level. Their support will be crucial to organising an effective army and maintaining order."
 FNG_Begin_Local_Land_Reform:0 "Begin Local Land Reform"
@@ -164,7 +164,7 @@ FNG_Courting_the_Grand_Marshals_Favour_desc:0 "The Fengtian Government consists 
 FNG_Revise_the_Military_Leadership:0 "Revise the Military Leadership"
 FNG_Revise_the_Military_Leadership_desc:0 "For several years the military establishment has been divided between old and young factions, its more venerable members veterans of the Civil Wars, and its newer members trained at the Japanese Army War College. Serious conflict has emerged between them, and if progress is to be made, the Grand Marshal must pick a side."
 FNG_Empower_the_Warlords:0 "Empower the Warlords"
-FNG_Empower_the_Warlords_desc:0 "Until the foundation of the Republic, Zhang Zuolin never possessed complete control over the four provinces. Instead he exercised hegemony over a series of weaker warlords, who were later folded into the new government through a Japanese backed centralization campaign. These Warlords now serve as Zhang's generals through a semi-feudal leadership structure, but their own ambitions remain."
+FNG_Empower_the_Warlords_desc:0 "Until the foundation of the Republic, Zhang Zuolin never possessed complete control over the four provinces. Instead he exercised hegemony over a series of weaker warlords, who were later folded into the new government through a Japanese backed centralisation campaign. These Warlords now serve as Zhang's generals through a semi-feudal leadership structure, but their own ambitions remain."
 FNG_The_Generals_Know_Best:0 "The Generals Know Best"
 FNG_The_Generals_Know_Best_desc: "The corrupt politicians of the Assembly have allowed Fengtian to meander aimlessly for too long. Only the Grand Marshal and his generals are capable of leading the country forward. It takes the iron mettle of disciplined military men to resist temptations posed by the Japanese and other forces that seek to divide and weaken China!"
 FNG_The_Jilin_Incident:0 "The Jilin Incident"
@@ -179,7 +179,7 @@ FNG_Exalt_the_Grand_Marshal_desc:0 "The generals and politicians squabble endles
 FNG_Formalize_the_Cult_of_Personality:0 "Formalise the Cult of Personality"
 FNG_Formalize_the_Cult_of_Personality_desc:0 "We must redouble our efforts to rightfully portray our glorious leader as the man he truly is; a paragon and exemplar to all Chinese. Official state functions and propaganda efforts will be adjusted appropriately."
 FNG_Proclaim_a_New_Mandate:0 "Proclaim a new Mandate"
-FNG_Proclaim_a_New_Mandate_desc:0 "The people's resolve to do away with Qing regressiveness and western imperialist influences has never been stronger, as exemplified in the Grand Marshal's proclamation today reducing the powers of the Assembly which has long been infested with scheming divisive elements."
+FNG_Proclaim_a_New_Mandate_desc:0 "The people's resolve to do away with Qing regressive nature and western imperialist influences has never been stronger, as exemplified in the Grand Marshal's proclamation today reducing the powers of the Assembly which has long been infested with scheming divisive elements."
 FNG_There_is_only_the_Grand_Marshal:0 "There is only the Grand Marshal"
 FNG_There_is_only_the_Grand_Marshal_desc:0 "It is time for the Grand Marshal, Zhang Zuolin, sun of China's future and beloved father of the Chinese people, to do away with internal disruptive forces and unite the country under a single banner! Ten thousand years to Grand Marshal Zhang!"
 #Constitutional Section#
@@ -238,8 +238,8 @@ FNG_Import_Artillery_from_Kokura:0 "Import Artillery from Kokura"
 FNG_Import_Artillery_from_Kokura_desc:0 "Japan's Kokura Arsenal has a long history of producing quality artillery, and importing these more advanced weapons ought to be much faster and cheaper than building more of our own."
 FNG_Adopt_the_Arisaka_Type_99:0 "Adopt the Arisaka Type 99"
 FNG_Adopt_the_Arisaka_Type_99_desc:0 "The Arisaka Type 99 has every indication of being an excellent infantry weapon, and adopting it would undoubtedly save us both time and money."
-FNG_Incentivize_Zaibatsu_Arms_Manufacture:0 "Incentivize Zaibatsu Arms Manufacture"
-FNG_Incentivize_Zaibatsu_Arms_Manufacture_desc:0 "Japan's mighty industrial conglomerates, the Zaibatsu, already operate in Fengtian in compeition to Mantetsu and domestic businesses. Encouraging Zaibatsu to produce arms in Fengtian and sell them directly to our forces would be a simple way of acquiring advanced systems otherwise outside our reach."
+FNG_Incentivize_Zaibatsu_Arms_Manufacture:0 "Incentivise Zaibatsu Arms Manufacture"
+FNG_Incentivize_Zaibatsu_Arms_Manufacture_desc:0 "Japan's mighty industrial conglomerates, the Zaibatsu, already operate in Fengtian in competition to Mantetsu and domestic businesses. Encouraging Zaibatsu to produce arms in Fengtian and sell them directly to our forces would be a simple way of acquiring advanced systems otherwise outside our reach."
 FNG_The_First_Hiroshima_Package:0 "The First Hiroshima Package"
 FNG_The_First_Hiroshima_Package_desc:0 "The first of our packages from the Imperial Japanese Army contains primarily small arms, artillery, and miscellaneous logistical supplies."
 FNG_The_Second_Hiroshima_Package:0 "The Second Hiroshima Package"
@@ -333,7 +333,7 @@ fengtian.11.t:0 "OH NO! Our troops are defecting!"
 fengtian.11.d:0 "Yes, it's true half our army has defected! Of course I still support my fabulous Japanese masters! I would never help the enemy..."
 fengtian.11.a:0 "We switch sides, I mean defectors should be shot!"
 fengtian.12.t:0 "Zhang Zuolin is playing games"
-fengtian.12.d:0 "We have received a communication from the Fengtein army that half of their forces are joining us.... Unless this is false or a ruse this is a great day indeed!"
+fengtian.12.d:0 "We have received a communication from the Fengtian army that half of their forces are joining us.... Unless this is false or a ruse this is a great day indeed!"
 fengtian.12.a:0 "keep them under watch but let them fight!"
 fengtian.13.t:0 "We have sat down at the table"
 fengtian.13.d:0 "When we offered a negotiated peace we thought the Germans would be fierce in their demands. However, they have come to the table wishing to talk sense."
