--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -8,21 +8,21 @@ ITA_black_monday_1_desc:0 "Italy is slowly recovering from the financial collaps
 ITA_spanish_economic_cooperation:0 "Economic Cooperation with Spain"
 ITA_spanish_economic_cooperation_desc:0 "Italy has made an agreement to cooperate economically with Spain, an arrangement that benefits them both."
 ITA_Catholic_Corporations:0 "Catholic Corporations"
-ITA_Catholic_Corporations_desc:0 "Corporations that are organized by the Papacy and exist to encourage employment amongst the poor - while simultaneously ensuring their spiritual health."
+ITA_Catholic_Corporations_desc:0 "Corporations that are organised by the Papacy and exist to encourage employment amongst the poor - while simultaneously ensuring their spiritual health."
 ITA_Employment_Surge:0 "Government Employment Programs"
-ITA_Employment_Surge_desc:0 "Makework for the masses, these are employment programs run by the government to give every Italian the opportunity to work."
+ITA_Employment_Surge_desc:0 "Make-work for the masses, these are employment programs run by the government to give every Italian the opportunity to work."
 ITA_Rise_of_the_Masses:0 "Rise of the Masses"
-ITA_Rise_of_the_Masses_desc:0 "The poor of Italy are rabidly in favor of the Papacy, and will do almost anything to defend it."
+ITA_Rise_of_the_Masses_desc:0 "The poor of Italy are rabidly in favour of the Papacy, and will do almost anything to defend it."
 ITA_Papal_Knights_spies:0 "Papal Knights"
 ITA_Papal_Knights_spies_desc:0 "These 'knights' are nothing more than spies and enforcers of the Papacy's will among the people, though they are lauded as unimpeachable bearer's of God's goodwill."
 ITA_Defenders_of_the_Faith:0 "Defenders of the Faith"
-ITA_Defenders_of_the_Faith_desc:0 "Italy's faithful have been energized by their pious pope, eager to fight in their nation's defense."
+ITA_Defenders_of_the_Faith_desc:0 "Italy's faithful have been energised by their pious pope, eager to fight in their nation's defence."
 ITA_Academy_of_Science:0 "Academy of Science"
 ITA_Academy_of_Science_desc:0 "An army of the Italian military, the Academy of Science is a research division on par with any in Europe."
 ITA_rising_power:0 "Rising Power"
 ITA_rising_power_desc:0 "Italy has proven itself to be a player on the world stage, and its people thirst for a return to true glory."
 ITA_isolated:0 "Splendid Isolation"
-ITA_isolated_desc:0 "Nothing would please the Italians more than to be left out of the global conflicts. They will defend their borders with vigor and solidarity!"
+ITA_isolated_desc:0 "Nothing would please the Italians more than to be left out of the global conflicts. They will defend their borders with vigour and solidarity!"
 Decentralised_State:0 "Decentralised State"
 Decentralised_State_desc:0 "Italian nobility is in constant strife with the numerous cardinals who want to centralise the state and give more power to the Holy See."
 Divided_Nation:0 "Divided Nation"
@@ -84,8 +84,8 @@ ITA_libya_owner_is_libya:0 "[LYB.GetName] is a free and independent state"
 ITA_libya_owner_can_sell:0 "Libya's owner is available to sell it to Italy"
 ITA_new_pope_not_dead:0 "The newly-elected pope has not died"
 Pius_XI:0 "Pius XI"
-Pius_XI_desc:0 "Pope Pius XI has been the pope since 1922. Due to his Italian ethnicity and papal authority, he was the one to unite the Italian states after the King´s exile. He is loved by catholics both in and outside Italy."
-POLITICS_PIUS_XII_DESC:0 "Pope Piux XII, formerly Eugenio Cardinal Pacelli, is a man of great spiritual fervor. He is renowned for his piety, but has a strong authoritarian streak that is matched only by his desire to protect the people."
+Pius_XI_desc:0 "Pope Pius XI has been the pope since 1922. Due to his Italian ethnicity and papal authority, he was the one to unite the Italian states after the King's exile. He is loved by Catholics both in and outside Italy."
+POLITICS_PIUS_XII_DESC:0 "Pope Piux XII, formerly Eugenio Cardinal Pacelli, is a man of great spiritual fervour. He is renowned for his piety, but has a strong authoritarian streak that is matched only by his desire to protect the people."
 POLITICS_STEPHEN_X_DESC:0 "Pope Stephen X, formerly Elia Cardinal dalla Costa, is a gentle man renown for his charitable nature and love of the poor. Most assume he will eventually turn the Papacy away from its direct rule of the nation, and already forces are gathering within Italy to determine who will undertake that role."
 POLITICS_JOHN_XXIII_DESC:0 "Pope John XXIII, formerly Achille Cardinal Liènart, is a controversial choice as Pope. He is a well-known socialist, considered by some to even be a radical, and it's possible he was chosen by the Papacy due to the possibility his socialist leanings will lead to a reconciliation with the south."
 POLITICS_JULIUS_IV_DESC:0 "Pope Julius IV, formerly Theodor Cardinal Innitzer, is a man renowned for his passion. He has been involved in the running of the Italian Federation for many years, and has declared syndicalism to be an evil he will battle until it is eradicated from the Earth."
@@ -98,7 +98,7 @@ ITA_Road_Network_desc:0 "We must put people to work on expanding the country's i
 ITA_Pontine_Marshes:0 "Clear the Pontine Marshes"
 ITA_Pontine_Marshes_desc:0 "The marshlands in the Lazio region of central Italy have stood since the time of the Romans. A concerted effort to clear them will provide ample farmland, as well as work for many thousands of idle hands."
 ITA_Industrialisation: "Industrial Methods"
-ITA_Industrialisation_desc:0 "There is much progress to be made if we are to become an industrial power. Let´s focus on modernizing our methods before expanding the existing facilities."
+ITA_Industrialisation_desc:0 "There is much progress to be made if we are to become an industrial power. Let's focus on modernising our methods before expanding the existing facilities."
 ITA_Construction_Effort:0 "Construction Effort"
 ITA_Construction_Effort_desc:0 "Our current industrial capacity is a disgrace to our country. We must make sure we expand our industrial capabilities."
 ITA_Construction_Effort_II:0 "Construction Effort II"
@@ -106,14 +106,14 @@ ITA_Construction_Effort_II_desc:0 "Clearly, more industry funding is necessary f
 ITA_Armament_Effort:0 "Armament Effort"
 ITA_Armament_Effort_desc:0 "Dangerous times lie ahead of us. We must prepare our country for expanded military production."
 ITA_Armament_Effort_II:0 "Armament Effort II"
-ITA_Armament_Effort_II_desc:0 "Modern warfare requires a stable supply of equipment and ammunition. Wellbeing of Italian soldiers must be our priority."
+ITA_Armament_Effort_II_desc:0 "Modern warfare requires a stable supply of equipment and ammunition. Well-being of Italian soldiers must be our priority."
 ITA_Black_Monday_Recovery:0 "Black Monday Recovery"
 ITA_Black_Monday_Recovery_desc:0 "The burst of construction and development in our country has clearly been enough to spur Italy's recovery from financial nightmare. Let us all celebrate!"
 ITA_National_Reconstruction_Program:0 "National Development Program"
 ITA_National_Reconstruction_Program_desc:0 "Over the last few decades, our one great country fell into disrepair. Our historical monuments lie damaged, and areas like the Pontine Marshes stand in our further development. This must not stand! Let us amaze the world by improving our country in numerous ways in a record time."
 ITA_Initiate_Risoregimento:0 "Initiate Risoregimento"
 ITA_Initiate_Risoregimento_desc:0 "The rival syndicalist government of the south is exposed and weak! Now is the time to strike them down and unite Italy!"
-ITA_Propose_Union:0 "Propose Peacful Reunion"
+ITA_Propose_Union:0 "Propose Peaceful Reunion"
 ITA_Propose_Union_desc:0 "The only thing that is preventing a peaceful reunion with the south is their syndicalist, totalitarian government. If that were to change..."
 ITA_Incorporate_South:0 "Incorporate the South"
 ITA_Incorporate_South_desc:0 "Italy has been reunited under a single government, from the Alps all the way to Sicily in the south. While this is a time to rejoice, there is much work still to be done to organize those accustomed to living under syndicalist tyranny."
@@ -141,8 +141,8 @@ ITA_Join_Austria_desc:0 "Despite our differences, we are in this situation toget
 ITA_Join_Canada:0 "Befriend Canada"
 ITA_Join_Canada_desc:0 "The Entente would be able to help us defend ourselves with their mighty navy. They can use an ally, and so can we."
 ITA_Form_Own_Faction:0 "Form the Italian Faction"
-ITA_Form_Own_Faction_desc:0 "We are a world-class power, and we need no other countries to lead our defense."
-ITA_Isolationism:0 "Defense First"
+ITA_Form_Own_Faction_desc:0 "We are a world-class power, and we need no other countries to lead our defence."
+ITA_Isolationism:0 "Defence First"
 ITA_Isolationism_desc:0 "Expanding our borders will only bring ire down upon our nation. We must look to protect what we have, not endanger it with reckless adventures."
 ITA_Northern_Frontier:0 "Northern Frontier"
 ITA_Northern_Frontier_desc:0 "Our northern border lies exposed. It must be reinforced."
@@ -151,7 +151,7 @@ ITA_Western_Frontier_desc:0 "Piemont needs to be protected, else Italy is sure t
 ITA_Nationalization:0 "Defensive Mentality"
 ITA_Nationalization_desc:0 "The people must embrace this new direction our government has taken and cooperate fully, for the betterment of all Italy."
 ITA_Guard_the_Coasts:0 "Guard the Coasts"
-ITA_Guard_the_Coasts_desc:0 "Our main weakness is a long coastline with many beaches which could be assaulted from the sea. We must build up defenses at the most vulnerable ports."
+ITA_Guard_the_Coasts_desc:0 "Our main weakness is a long coastline with many beaches which could be assaulted from the sea. We must build up defences at the most vulnerable ports."
 ITA_Papal_Conclave:0 "Call Papal Conclave"
 ITA_Papal_Conclave_desc:0 "With the death of Pius XI, a conclave will need to be called by the cardinals to select a replacement - a Pope who will determine our path for the years to come."
 ITA_Elia_dalla_Costa:0 "Pope Stephen X"
@@ -179,13 +179,13 @@ ITA_Worker_Rights_Reform_desc:0 "There needs to be no revolution to reach the ne
 ITA_Secular_Trade_Unions:0 "Secular Trade Unions"
 ITA_Secular_Trade_Unions_desc:0 "The trade unions are the bedrocks of the modern social state. Even in our country, they should be completely secular."
 ITA_Industrialise_the_Peninsula:0 "Industrialise the Peninsula"
-ITA_Industrialise_the_Peninsula_desc:0 "With the unions empowered, we must mobilize the workers of Italy to expand our industry and make it the heart of our growing state."
+ITA_Industrialise_the_Peninsula_desc:0 "With the unions empowered, we must mobilise the workers of Italy to expand our industry and make it the heart of our growing state."
 ITA_Crush_Aristocracy_II:0 "Crush the Aristocracy"
 ITA_Crush_Aristocracy_II_desc:0 "The Italian aristocracy holds far too much power and wealth, and they will go to great lengths to protect it - even so far as to overthrow the pope, if they feel he is threatening their stranglehold on the people. That must end."
 ITA_Reconciliation:0 "Reconciliation"
 ITA_Reconciliation_desc:0 "Italy does not need to be completely divided by ideology. While it will take many difficult talks to unite Italy once again, for the moment we can at least agree to mutually recognise our governments and embark upon an exchange of ideas."
 ITA_Establish_Democracy_II:0 "Power to the People"
-ITA_Establish_Democracy_II_desc:0 "The last step in social reform is recognizing that God's place is to guide, not to rule. True power belongs in the people, and a socialist state must be erected to look after their welfare."
+ITA_Establish_Democracy_II_desc:0 "The last step in social reform is recognising that God's place is to guide, not to rule. True power belongs in the people, and a socialist state must be erected to look after their welfare."
 ITA_Theodor_Innitzer:0 "Pope Julius IV"
 ITA_Theodor_Innitzer_desc:0 "Theodor Innitzer is a man described by many as leaning to far right ideology. He warns against the evils of radical socialism, and declares he is willing to take up arms to defend Christendom by any means necessary."
 ITA_Extended_Armament:0 "Extended Armament"
