--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -460,7 +460,7 @@ UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left
 UKR_Skoropadsky_Policy:0 "Ukrainian Unity"
 UKR_Skoropadsky_Policy_desc:0 "The relations between the Russians and the Ukrainians in Ukraine are good enough, but various  powers try to depict them as an eternal struggle between the West and the East. We must stop this chauvinistic propaganda, but our aim is also to show that despite the common past and good relations with Russia, we are independent now and will always be."
 UKR_Army_Reforms:0 "Professional Army"
-UKR_Army_Reforms_desc:0 "It is obvious, that the Ukrainian army cannot be be compared with the Russian or German army in any condition, but it is still stronger than any army of the neighboring states. That's why Skoropadsky proposed a creation of the small professional army, which will help us maintain our security, but will also allow us to reduce the defence budget."
+UKR_Army_Reforms_desc:0 "It is obvious, that the Ukrainian army cannot be be compared with the Russian or German army in any condition, but it is still stronger than any army of the neighbouring states. That's why Skoropadsky proposed a creation of the small professional army, which will help us maintain our security, but will also allow us to reduce the defence budget."
 UKR_Peasant_State:0 "Peasant State"
 UKR_Peasant_State_desc:0 "Our peasants has always been playing a significant role in the country and its economy. Now, when we get enough money after the reduction of the defence budget, we can reduce the taxes until our agriculture recovers from the Berlin Stock crisis and we will become a breadbasket of Europe once again."
 UKR_Prohibit_Syndicalism:0 "Prohibit the Syndicalism"
