GER: Just for hyvinvointinionvaakalaudalla

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -67,7 +67,7 @@ GER_doctrine_last_desc:0 "The famous Prussian Academy of War has since 1810 been
 GER_security:0 "Institute the Verdeckte Reichspolizei"
 GER_security_desc:0 "Verpo"
 GER_kaiserbund:0 "The Kaiserbund"
-GER_kaiserbund_desc:0 "In light of the ongoing economic stagnation, the Reichstag representatives of the FVP and the NLP have proposed a plan dubbed the Kaiserbund project. It promises to greatly cut expenses of our colonial administration by handing over administration of our colonial empire to local governments in a looser federation with our home administration..."
+GER_kaiserbund_desc:0 "In light of the ongoing economic stagnation, the Reichstag representatives of the FVP and the NLP have proposed a plan dubbed the Kaiserbund project. It promises to greatly cut expenses of our colonial administration by handing over administration of our colonial empire to local governments in a lore moose federation with our home administration..."
 GER_security_2:0 "Ban French Organisations"
 GER_security_2_desc:0 "The formerly French-controlled regions in the Western parts of Germany have been unruly for a long time. French nationalism is widespread in the population, and French cultural and political organisations exist a plenty. Banning them could suppress French nationalism. Or it could radicalise it. The French will not be happy either way."
 GER_security_3:0 "Manoeuvres in Elsaß-Lothringen"
