--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -22,6 +22,7 @@ Scandinavian_Pact:0 "Scandinavian Pact"
 Mediterranean_Bloc:0 "Mediterranean Bloc"
 
 ### Name and Description ###
+BM_HISTORY_TITLE:0 "Brief History"
 KR_SCENARIO_NAME:0 "Legacy of the Weltkrieg"
 KR_SCENARIO_DESC:0 "The year of 1936 is a turning point for the history of the world. A time of both great opportunity and great danger. Tensions between the German Empire and the Commune of France are growing, Russia and the USA are increasingly unstable and the old empires of Austria and Ottomans are dissolving. All the meanwhile Syndicalism, Totalism and Radical Socialism are spreading all around the world. Fifteen years have passed since the end of the Weltkrieg, and the old rivalries of yore have reappeared. A single spark may be all it takes to light the powder keg..."
 
