--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -24,7 +24,7 @@ ott_air_designs:0 "Allowed aircraft licensing"
 ott_air_designs_rejected:0 "Refused to sell licence"
 ott_naval_dominance:0 "Ottoman naval dominance"
 
-### EGYPT FILE ### (Will be located in here temporarily) ###
+# EGYPT FILE #
 arabcon:0 "Arabian nationalism"
 arabcon1:0 "Supported Arabian nationalism"
 arabcon2:0 "Supported Arabian nationalism"
@@ -58,7 +58,7 @@ egy_embargo:0 "Embargo"
 ott_germanaid:0 "German Aid"
 egy_kurds:0 "Axis intervention"
 
-### HASHEMITE FILE ### (Will be located in here temporarily) ###
+# HASHEMITE FILE #
 ott_jabalshammar:0 "Treason"
 sau_rebuild:0 "Respected our sovereignty"
 
@@ -138,6 +138,16 @@ tomtas:0 "TOMTAŞ"
 germaniawerft_osmanen:0 "Germaniawerft"
 golcuk_tersanesi:0 "Gölcük Tersanesi"
 taskizak_tersanesi:0 "Taşkızak Tersanesi"
+
+### Theorists ###
+ahmed_izzet_pasha:0 "Ahmed İzzet Paşa"
+yakup_sevki_pasha:0 "Yakup Şevki Paşa"
+mustafa_kemal_pasha:0 "Mustafa Kemal Paşa"
+fahrettin_pasha:0 "Fahrettin Paşa"
+santuri_mustafa_bey:0 "Santuri Mustafa Bey"
+osman_besim_bey:0 "Osman Besim Bey"
+
+### Equipment ###
 
 ### Foci ###
 OTT_internal_affairs:0 "Matters of the State"
@@ -656,7 +666,7 @@ ott.78.d:0 "The civilian population of the Suez Canal have finally accepted the 
 ott.78.a:0 "Biz Alla Bilen!"
 
 ######################################################################################
-#Hashemite Arabia and Egypt Localisations (Will be located in here temporarily)
+#Hashemite Arabia and Egypt Localisations (Will be located in here for temporarily)
 ######################################################################################
 
 arabia.1.t:0 "Hashemite Arabia introduction"
