Spelling fixes, and cut down the new loading tips so they don't overrun

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -24,7 +24,7 @@ ott_air_designs:0 "Allowed aircraft licensing"
 ott_air_designs_rejected:0 "Refused to sell licence"
 ott_naval_dominance:0 "Ottoman naval dominance"
 
-# EGYPT FILE #
+# EGYPT FILE # (Will be located in here temporarily)
 arabcon:0 "Arabian nationalism"
 arabcon1:0 "Supported Arabian nationalism"
 arabcon2:0 "Supported Arabian nationalism"
@@ -58,7 +58,7 @@ egy_embargo:0 "Embargo"
 ott_germanaid:0 "German Aid"
 egy_kurds:0 "Axis intervention"
 
-# HASHEMITE FILE #
+# HASHEMITE FILE # (Will be located in here temporarily)
 ott_jabalshammar:0 "Treason"
 sau_rebuild:0 "Respected our sovereignty"
 
@@ -146,8 +146,6 @@ mustafa_kemal_pasha:0 "Mustafa Kemal Paşa"
 fahrettin_pasha:0 "Fahrettin Paşa"
 santuri_mustafa_bey:0 "Santuri Mustafa Bey"
 osman_besim_bey:0 "Osman Besim Bey"
-
-### Equipment ###
 
 ### Foci ###
 OTT_internal_affairs:0 "Matters of the State"
@@ -313,7 +311,7 @@ ott.1.d:0 "In the year of 1936, 15 years after the Weltkrieg, the victorious Ott
 ott.1.a:0 "Calm before the storm..."
 
 ott.2.t:0 "Black Monday hits Ottoman Empire!"
-ott.2.d:0 "Almost month ago, the Berlin Stock Exchange plunged into bottomless depths, throwing the economy of the German empire into an unprecedented crisis. Now the crash's shock waves have reached the Ottoman Empire. German and Austrian-owned companies have closed down or laid-off their workers, the Ottoman lira is losing it´s already-low value, and resource exports are shrinking. Our unstable economy is on the verge of collapse..."
+ott.2.d:0 "Almost month ago, the Berlin Stock Exchange plunged into bottomless depths, throwing the economy of the German empire into an unprecedented crisis. Now the crash's shock waves have reached the Ottoman Empire. German and Austrian-owned companies have closed down or laid-off their workers, the Ottoman lira is losing it's already-low value, and resource exports are shrinking. Our unstable economy is on the verge of collapse..."
 ott.2.a:0 "Great Allah protect us!!"
 
 ott.3.t:0 "Initial stabilisation"
@@ -467,7 +465,7 @@ ott.34.b:0 "That sounds too dangerous!"
 
 ott.35.t:0 "Egypt comes to our aid!"
 ott.35.d:0 "Our brothers in Cairo decided to send assistance in our fight against the Ottomans."
-ott.35.a:0 "Ya Ka3 Trabch!"
+ott.35.a:0 "Ya Ka3 Trabch!" #Ka3???
 
 ott.36.t:0 "Egypt intervenes!"
 ott.36.d:0 "Cairo has decided to intervene our conflict against the Hejazi Bedouins!"
@@ -666,7 +664,7 @@ ott.78.d:0 "The civilian population of the Suez Canal have finally accepted the 
 ott.78.a:0 "Biz Alla Bilen!"
 
 ######################################################################################
-#Hashemite Arabia and Egypt Localisations (Will be located in here for temporarily)
+#Hashemite Arabia and Egypt Localisations (Will be located in here temporarily)
 ######################################################################################
 
 arabia.1.t:0 "Hashemite Arabia introduction"
