--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -71,7 +71,7 @@ LOADING_TIP_67:0 "I don`t like you, and you don`t like me, but now we are in the
 LOADING_TIP_68:0 "The reactionary stands firm before the glaring lamp of progress, and here in the shadow he casts we find the distinction of states, and the origin of identity itself. \n- Rev. Daniel Garrity"
 LOADING_TIP_69:0 "Do you think love can bloom even on a battlefield? \n- Dr. Hal Emmerich"
 LOADING_TIP_70:0 "Blessed are the meek: for they shall inherit the earth. \n- Matthew 5:5, King James Bible"
-LOADING_TIP_71:0 "Yet across the gulf of space, minds that are to our minds as ours are to those of the beasts that perish, intellects vast and cool and unsympathetic, regarded this earth with envious eyes, and slowly and surely drew their plans against us. \n- H.G. Wells, The War of the Worlds"
+LOADING_TIP_71:0 "Yet across the gulf of space, intellects vast and cool and unsympathetic, regarded this earth with envious eyes, and slowly and surely drew their plans against us. \n- H.G. Wells, The War of the Worlds"
 LOADING_TIP_71:0 "I already am eating from the trash can all the time. The name of this trash can is ideology. The material force of ideology makes me not see what I am effectively eating. \n- Slavoj Žižek"
 LOADING_TIP_72:0 "Hegel remarks somewhere that all great world-historic facts and personages appear, so to speak, twice. He forgot to add: The first time as tragedy, the second time as farce. \N -Karl Marx"
 LOADING_TIP_73:0 "But what do we mean by the American Revolution? Do we mean the American war? \n- John Adams"
@@ -106,7 +106,7 @@ LOADING_TIP_101:0 "We are on the verge of events, the likes of which the world h
 LOADING_TIP_102:0 "One day, the Great Russian Republic will be much stronger, richer and freer than the old Tsarist Empire. But how much blood will be shed. \n- Boris Savinkov"
 LOADING_TIP_103:0 "There is one certainty of the future of a people of the resources, intelligence and character of the people of the United States—that is, prosperity. \n- Herbert Hoover"
 LOADING_TIP_104:0 "I prefer a government run like hell by Filipinos to a government run like heaven by Americans. \n- Manuel L. Quezon"
-LOADING_TIP_105:0 "Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha, to a Western ambassador"
+LOADING_TIP_105:0 "Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha
 LOADING_TIP_106:0 "What can you expect of us, the children of slaves, brought up by eunuchs? \n- Sultan Abdulhamid II of Ottoman Empire, to a British friend"
 LOADING_TIP_107:0 "and they shall beat their swords into plowshares, and their spears into pruninghooks; nation shall not lift up sword against nation, neither shall they learn war any more. \n - Isiah 2.4"
 LOADING_TIP_108:0 "The death of one man is a tragedy, but the death of millions is a statistic. \n- Erich Paul Remark, Fuhrerreich"
