--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -71,7 +71,7 @@ LOADING_TIP_67:0 "I don`t like you, and you don`t like me, but now we are in the
 LOADING_TIP_68:0 "The reactionary stands firm before the glaring lamp of progress, and here in the shadow he casts we find the distinction of states, and the origin of identity itself. \n- Rev. Daniel Garrity"
 LOADING_TIP_69:0 "Do you think love can bloom even on a battlefield? \n- Dr. Hal Emmerich"
 LOADING_TIP_70:0 "Blessed are the meek: for they shall inherit the earth. \n- Matthew 5:5, King James Bible"
-LOADING_TIP_71:0 "Yet across the gulf of space, intellects vast and cool and unsympathetic, regarded this earth with envious eyes, and slowly and surely drew their plans against us. \n- H.G. Wells, The War of the Worlds"
+LOADING_TIP_71:0 "Yet across the gulf of space, minds that are to our minds as ours are to those of the beasts that perish, intellects vast and cool and unsympathetic, regarded this earth with envious eyes, and slowly and surely drew their plans against us. \n- H.G. Wells, The War of the Worlds"
 LOADING_TIP_71:0 "I already am eating from the trash can all the time. The name of this trash can is ideology. The material force of ideology makes me not see what I am effectively eating. \n- Slavoj Žižek"
 LOADING_TIP_72:0 "Hegel remarks somewhere that all great world-historic facts and personages appear, so to speak, twice. He forgot to add: The first time as tragedy, the second time as farce. \N -Karl Marx"
 LOADING_TIP_73:0 "But what do we mean by the American Revolution? Do we mean the American war? \n- John Adams"
