--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -466,6 +466,9 @@ fengtian.43.c:0 "Nanjing is our new capital"
 
 ### New Fengtian Events ###
 
+fengtian.new.1.t:0 "Huanghanhui Crackdown"
+fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n \n Shortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Mukden, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to puruse this matter any further."
+fengtian.new.1.a:0 "Troubling"
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
