fixed this quote

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -108,7 +108,7 @@ LOADING_TIP_103:0 "There is one certainty of the future of a people of the resou
 LOADING_TIP_104:0 "I prefer a government run like hell by Filipinos to a government run like heaven by Americans. \n- Manuel L. Quezon"
 LOADING_TIP_105:0 "Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha, to a Western ambassador"
 LOADING_TIP_106:0 "What can you expect of us, the children of slaves, brought up by eunuchs? \n- Sultan Abdulhamid II of Ottoman Empire, to a British friend"
-LOADING_TIP_107:0 "and they shall beat their swords into plowshares, and their spears into pruninghooks; nation shall not lift up sword against nation, neither shall they learn war any more. \n - Isiah 2.4"
+LOADING_TIP_107:0 "And they shall beat their swords into plowshares, and their spears into pruninghooks; nation shall not lift up sword against nation, neither shall they learn war any more. \n - Isiah 2.4"
 LOADING_TIP_108:0 "The death of one man is a tragedy, but the death of millions is a statistic. \n- Erich Paul Remark, Fuhrerreich"
 LOADING_TIP_109:0 "A word of command has made these silent figures our enemies; a word of command might transform them into our friends. \n- Erich Paul Remark, Im Westen nichts Neues"
 LOADING_TIP_110:0 "Hell has gone bankrupt. It has been superseded by the horrors man creates on Earth, and often even in his own heart. \n- Ignas Šeinius, Raudonasis tvanas"
