--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -451,10 +451,10 @@ fengtian.40.t:0 "Fengtian Republic would like us to join them as one Christian n
 fengtian.40.d:0 "A day ago we asked the new leader of the Fengtian Republic to start an alliance with us. They now think that we would fit better as one nation under the Christian banner."
 fengtian.40.a:0 "As Christians we must accept this offer."
 fengtian.40.b:0 "No. An alliance is best for us."
-fengtian.40.c:0 "This is outragous! Cut all relations with the Fengtian Republic!"
+fengtian.40.c:0 "This is outrageous! Cut all relations with the Fengtian Republic!"
 fengtian.41.t:0 "Two republics as one!"
 fengtian.41.d:0 "The Shangqing Tiango or Heavenly Kingdom has accepted our annexation offer. This is a great chance to start a new era in Chinese politics!"
-fengtian.41.a:0 "We live & rule togheter as one government in one republic!"
+fengtian.41.a:0 "We live & rule together as one government in one republic!"
 fengtian.42.t:0 "China reunited!"
 fengtian.42.d:0 "We had to fight fiercely on the battlefields and in the conference rooms but we have reached our goal. China is now reunited and stronger than ever! The last hundred years was just a nightmare! Time for a big festival to celebrate becoming a Great Power!"
 fengtian.42.a:0 "China forever!"
@@ -467,8 +467,9 @@ fengtian.43.c:0 "Nanjing is our new capital"
 ### New Fengtian Events ###
 
 fengtian.new.1.t:0 "Huanghanhui Crackdown"
-fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n \n Shortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Mukden, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to puruse this matter any further."
+fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n \n Shortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Mukden, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to pursue this matter any further."
 fengtian.new.1.a:0 "Troubling"
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
